--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "b6364ed9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "id": "a6c80cd6-729c-4350-a37d-3a6f4e78b3b8",
    "metadata": {},
@@ -2197,11 +2207,139 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5a01692",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f316237",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4a03198",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d6df61a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eda304b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2f562a16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "sheet_url = \"data/data.xlsx\"\n",
+    "sheet_ea_day = \"0. Energy Access(LP)\"\n",
+    "sheet_ea_dump = \"1. Energy Access Dump\"\n",
+    "sheet_ea_passed = \"2. Energy Access(Passed)\"\n",
+    "sheet_ea_bad = \"3. Energy Access(Bad)\"\n",
+    "\n",
+    "energy_access_day = pd.read_excel(sheet_url, sheet_ea_day)\n",
+    "ea_dump = pd.read_excel(sheet_url, sheet_ea_dump)\n",
+    "ea_passed = pd.read_excel(sheet_url, sheet_ea_passed)\n",
+    "ea_bad = pd.read_excel(sheet_url, sheet_ea_bad)\n",
+    "\n",
+    "\n",
+    "#sampling_numbers \n",
+    "sampling_sheet = \"Sampling Numbers\"\n",
+    "sampling_numbers = pd.read_excel(sheet_url, sampling_sheet)\n",
+    "\n",
+    "##### data collection progress\n",
+    "\n",
+    "# Create Urban_Collected and Rural_Collected based on \"Area Description\"\n",
+    "ea_passed[\"Urban_Collected\"] = (ea_passed[\"Area Description\"] == \"Urban\").astype(int)\n",
+    "ea_passed[\"Rural_Collected\"] = (ea_passed[\"Area Description\"] == \"Rural\").astype(int)\n",
+    "\n",
+    "ea_passed = pd.DataFrame(ea_passed)\n",
+    "\n",
+    "# Group by State and LGA, sum Urban and Rural collected\n",
+    "summary_collected = ea_passed.groupby([\"State\", \"LGA\"])[[\"Urban_Collected\", \"Rural_Collected\"]].sum().reset_index()\n",
+    "\n",
+    "\t\n",
+    "# Outer Join on 'LGA'\n",
+    "merged_collection_summ = pd.merge(sampling_numbers, summary_collected, on=['State', 'LGA'] , how='outer')\n",
+    "\n",
+    "merged_collection_summ.fillna(0, inplace=True)\n",
+    "\n",
+    "# Calculate Completion Percentage per LGA\n",
+    "merged_collection_summ[\"Urban_Completion\"] = (merged_collection_summ[\"Urban_Collected\"] / merged_collection_summ[\"Urban_Target\"]) * 100\n",
+    "merged_collection_summ[\"Rural_Completion\"] = (merged_collection_summ[\"Rural_Collected\"] / merged_collection_summ[\"Rural_Target\"]) * 100\n",
+    "\n",
+    "# Aggregate to State Level\n",
+    "state_completion = merged_collection_summ.groupby(\"State\").agg(\n",
+    "    Urban_Completion=(\"Urban_Completion\", \"mean\"),\n",
+    "    Rural_Completion=(\"Rural_Completion\", \"mean\")\n",
+    ").reset_index()\n",
+    "\n",
+    "# Calculate Overall Completion per State\n",
+    "state_completion[\"Overall_Completion\"] = round((state_completion[\"Urban_Completion\"] + state_completion[\"Rural_Completion\"]) / 2,0)\n",
+    "\n",
+    "state_data = state_completion.copy()\n",
+    "\n",
+    "#### deficit to calculate percentage completion\n",
+    "\n",
+    "# Calculate the Deficit (Data not yet collected)\n",
+    "merged_collection_summ[\"Urban_Deficit\"] = merged_collection_summ[\"Urban_Target\"] - merged_collection_summ[\"Urban_Collected\"]\n",
+    "merged_collection_summ[\"Rural_Deficit\"] = merged_collection_summ[\"Rural_Target\"] - merged_collection_summ[\"Rural_Collected\"]\n",
+    "\n",
+    "# If collected >= target, set deficit to 0 (i.e., already completed)\n",
+    "merged_collection_summ[\"Urban_Deficit\"] = merged_collection_summ[\"Urban_Deficit\"].apply(lambda x: x if x > 0 else 0)\n",
+    "merged_collection_summ[\"Rural_Deficit\"] = merged_collection_summ[\"Rural_Deficit\"].apply(lambda x: x if x > 0 else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2eb57608",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_collection_summ.to_csv('Data_collection_Tracker.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d13b84c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.12.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2215,7 +2353,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a940ce198f1cec256b3c1d63fb015ac77894c8c2a48fdeb7eec9bef16754d937"
+   }
   }
  },
  "nbformat": 4,
