--- a/EDA copy.ipynb
+++ b/EDA copy.ipynb
@@ -2,117 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b6364ed9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import streamlit as st\n",
-    "import pandas as pd\n",
-    "import datetime\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "import gspread"
+    "import pandas as pd"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc5c0df8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  read data google sheet from jupyter notebook\n",
-    "data_path = \"data/data.xlsx\"\n",
-    "\n",
-    "sheet_ea_day = \"0. Energy Access(LP)\"\n",
-    "sheet_ea_dump = \"1. Energy Access Dump\"\n",
-    "sheet_ea_passed = \"2. Energy Access(Passed)\"\n",
-    "sheet_ea_bad = \"3. Energy Access(Bad)\"\n",
-    "\n",
-    "\n",
-    "energy_access_day = pd.read_excel(data_path, sheet_ea_day)\n",
-    "ea_dump = pd.read_excel(data_path, sheet_ea_dump)\n",
-    "ea_passed = pd.read_excel(data_path, sheet_ea_passed)\n",
-    "ea_bad = pd.read_excel(data_path, sheet_ea_bad)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69644c77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "#sheet_url = \"https://docs.google.com/spreadsheets/d/1gCwYBWV_v0Ajuwfcive6yuqWcio_Ta0Bbad4IXzMz8w/edit#gid=0\"\n",
-    "#sheet_ea_day = \"0. Energy Access(LP)\"\n",
-    "#sheet_ea_dump = \"1. Energy Access Dump\"\n",
-    "#sheet_ea_passed = \"2. Energy Access(Passed)\"\n",
-    "#sheet_ea_bad = \"3. Energy Access(Bad)\"\n",
-    "\n",
-    "#energy_access_day = get_google_sheet(sheet_url, sheet_ea_day)\n",
-    "#ea_dump = get_google_sheet(sheet_url, sheet_ea_dump)\n",
-    "#ea_passed = get_google_sheet(sheet_url, sheet_ea_passed)\n",
-    "#ea_bad = get_google_sheet(sheet_url, sheet_ea_bad)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce2e509c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0df158b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4a24ca7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d81b7af8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "546d71f9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3714f616",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "620977a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2424,102 +2320,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2eb57608",
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_collection_summ.to_csv('All_Data_collection_Tracker.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "02bca33e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "states_visited = ea_passed['State'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "927cf637",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_visited_summary = merged_collection_summ[merged_collection_summ[\"State\"].isin(states_visited)]\n",
-    "state_visited_summary.to_csv('data/state_visited_summary.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d13b84c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_collection_summ.to_csv('data/All_Data_collection_Tracker.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "8fc06ee3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "states_visited = ea_passed['State'].unique()\n",
-    "state_visited_summary = merged_collection_summ[merged_collection_summ[\"State\"].isin(states_visited)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "e145457e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_options = state_visited_summary[\"State\"].unique().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "bf67039c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Akwa-Ibom',\n",
-       " 'Bayelsa',\n",
-       " 'Cross River',\n",
-       " 'Delta',\n",
-       " 'Edo',\n",
-       " 'Ekiti',\n",
-       " 'Lagos',\n",
-       " 'Ogun',\n",
-       " 'Ondo',\n",
-       " 'Osun',\n",
-       " 'Oyo',\n",
-       " \"River's\"]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "state_options"
+    "merged_collection_summ.to_csv('Data_collection_Tracker.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bbd4b49",
+   "id": "d13b84c2",
    "metadata": {},
    "outputs": [],
    "source": []
