--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,10 +271,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Daily_avg_expected = 300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perc_in_dec_collection = -(((Daily_avg_expected - daily_avg_combined )/Daily_avg_expected)*100).round(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-33.0)"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "perc_in_dec_collection"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,13 +336,15 @@
     "    'overall_completion' : [0],\n",
     "    'perc_deficit' : [0],\n",
     "    'total_clean_records' : [0],\n",
-    "    'total_bad_records' : [0]\n",
+    "    'total_bad_records' : [0],\n",
+    "    'Daily_avg_expected': [0],\n",
+    "    'perc_in_dec_collection': [0]\n",
     "})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -347,43 +380,47 @@
        "      <th>completion_date_text</th>\n",
        "      <th>overall_completion</th>\n",
        "      <th>perc_deficit</th>\n",
+       "      <th>total_clean_records</th>\n",
+       "      <th>total_bad_records</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>13 states visited</td>\n",
+       "      <td>7459</td>\n",
+       "      <td>1597</td>\n",
+       "      <td>200</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>March 4th, 2025</td>\n",
+       "      <td>March-20-2025</td>\n",
+       "      <td>20.07</td>\n",
+       "      <td>79.93</td>\n",
+       "      <td>1597</td>\n",
+       "      <td>59</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   total_states  states_done  state_per_cmptd  states_visited  total_target  \\\n",
-       "0             0            0                0               0             0   \n",
+       "   total_states  states_done  state_per_cmptd     states_visited  \\\n",
+       "0            37            1              2.7  13 states visited   \n",
        "\n",
-       "   current_total  daily_avg_combined  perc_inc_dec_avg_col  \\\n",
-       "0              0                   0                     0   \n",
+       "   total_target  current_total  daily_avg_combined  perc_inc_dec_avg_col  \\\n",
+       "0          7459           1597                 200                   -12   \n",
        "\n",
-       "   expected_completion_date  completion_date_text  overall_completion  \\\n",
-       "0                         0                     0                   0   \n",
+       "  expected_completion_date completion_date_text  overall_completion  \\\n",
+       "0          March 4th, 2025        March-20-2025               20.07   \n",
        "\n",
-       "   perc_deficit  \n",
-       "0             0  "
+       "   perc_deficit  total_clean_records  total_bad_records  \n",
+       "0         79.93                 1597                 59  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,12 +448,14 @@
     "dashboard_single_df['overall_completion'] = overall_completion\n",
     "dashboard_single_df['perc_deficit'] = perc_deficit\n",
     "dashboard_single_df['total_clean_records'] = total_clean_records\n",
-    "dashboard_single_df['total_bad_records'] = total_bad_records"
+    "dashboard_single_df['total_bad_records'] = total_bad_records\n",
+    "dashboard_single_df['Daily_avg_expected'] = Daily_avg_expected\n",
+    "dashboard_single_df['perc_in_dec_collection'] = perc_in_dec_collection "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,14 +464,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "March-26-2025\n"
+      "March-20-2025\n"
      ]
     }
    ],
@@ -456,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
