--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +163,9 @@
     "# Exclude the latest date\n",
     "latest_date = daily_collection_combined.index.max()\n",
     "daily_collection_excluding_latest = daily_collection_combined[daily_collection_combined.index != latest_date]\n",
+    "last_collection_df = daily_collection_combined[daily_collection_combined.index == latest_date]\n",
+    "last_collection_count =  len(last_collection_df)\n",
+    "\n",
     "\n",
     "# Average daily collection (excluding the latest date)\n",
     "prev_daily_avg_combined = round(daily_collection_excluding_latest.mean(), 0)\n",
@@ -182,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,16 +283,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_collection_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'float' object has no attribute 'round'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m perc_in_dec_collection \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mDaily_avg_expected\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mlast_collection_count\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mDaily_avg_expected\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mround\u001b[49m(\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'float' object has no attribute 'round'"
+     ]
+    }
+   ],
    "source": [
     "perc_in_dec_collection = -(((Daily_avg_expected - daily_avg_combined )/Daily_avg_expected)*100).round(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +333,7 @@
        "np.float64(-33.0)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,13 +373,14 @@
     "    'total_clean_records' : [0],\n",
     "    'total_bad_records' : [0],\n",
     "    'Daily_avg_expected': [0],\n",
-    "    'perc_in_dec_collection': [0]\n",
+    "    'perc_in_dec_collection': [0],\n",
+    "    'last_collection_count':[0]\n",
     "})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -382,45 +418,54 @@
        "      <th>perc_deficit</th>\n",
        "      <th>total_clean_records</th>\n",
        "      <th>total_bad_records</th>\n",
+       "      <th>Daily_avg_expected</th>\n",
+       "      <th>perc_in_dec_collection</th>\n",
+       "      <th>last_collection_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>13 states visited</td>\n",
-       "      <td>7459</td>\n",
-       "      <td>1597</td>\n",
-       "      <td>200</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>March 4th, 2025</td>\n",
-       "      <td>March-20-2025</td>\n",
-       "      <td>20.07</td>\n",
-       "      <td>79.93</td>\n",
-       "      <td>1597</td>\n",
-       "      <td>59</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   total_states  states_done  state_per_cmptd     states_visited  \\\n",
-       "0            37            1              2.7  13 states visited   \n",
+       "   total_states  states_done  state_per_cmptd  states_visited  total_target  \\\n",
+       "0             0            0                0               0             0   \n",
        "\n",
-       "   total_target  current_total  daily_avg_combined  perc_inc_dec_avg_col  \\\n",
-       "0          7459           1597                 200                   -12   \n",
+       "   current_total  daily_avg_combined  perc_inc_dec_avg_col  \\\n",
+       "0              0                   0                     0   \n",
        "\n",
-       "  expected_completion_date completion_date_text  overall_completion  \\\n",
-       "0          March 4th, 2025        March-20-2025               20.07   \n",
+       "   expected_completion_date  completion_date_text  overall_completion  \\\n",
+       "0                         0                     0                   0   \n",
        "\n",
-       "   perc_deficit  total_clean_records  total_bad_records  \n",
-       "0         79.93                 1597                 59  "
+       "   perc_deficit  total_clean_records  total_bad_records  Daily_avg_expected  \\\n",
+       "0             0                    0                  0                   0   \n",
+       "\n",
+       "   perc_in_dec_collection  last_collection_count  \n",
+       "0                       0                      0  "
       ]
      },
-     "execution_count": 182,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,12 +495,13 @@
     "dashboard_single_df['total_clean_records'] = total_clean_records\n",
     "dashboard_single_df['total_bad_records'] = total_bad_records\n",
     "dashboard_single_df['Daily_avg_expected'] = Daily_avg_expected\n",
-    "dashboard_single_df['perc_in_dec_collection'] = perc_in_dec_collection "
+    "dashboard_single_df['perc_in_dec_collection'] = perc_in_dec_collection\n",
+    "dashboard_single_df['last_collection_count'] = last_collection_count "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
